; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/advapi32/wine/extr_crypt_des.c_KeyShiftRight.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/advapi32/wine/extr_crypt_des.c_KeyShiftRight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @KeyShiftRight to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @KeyShiftRight(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 6
  %10 = load i8, i8* %9, align 1
  store i8 %10, i8* %6, align 1
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %75, %2
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %78

15:                                               ; preds = %11
  store i32 6, i32* %7, align 4
  br label %16

16:                                               ; preds = %50, %15
  %17 = load i32, i32* %7, align 4
  %18 = icmp sge i32 %17, 0
  br i1 %18, label %19, label %53

19:                                               ; preds = %16
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 6
  br i1 %21, label %22, label %41

22:                                               ; preds = %19
  %23 = load i8*, i8** %3, align 8
  %24 = load i32, i32* %7, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %23, i64 %25
  %27 = load i8, i8* %26, align 1
  %28 = zext i8 %27 to i32
  %29 = and i32 %28, 1
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %41

31:                                               ; preds = %22
  %32 = load i8*, i8** %3, align 8
  %33 = load i32, i32* %7, align 4
  %34 = add nsw i32 %33, 1
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8, i8* %32, i64 %35
  %37 = load i8, i8* %36, align 1
  %38 = zext i8 %37 to i32
  %39 = or i32 %38, 128
  %40 = trunc i32 %39 to i8
  store i8 %40, i8* %36, align 1
  br label %41

41:                                               ; preds = %31, %22, %19
  %42 = load i8*, i8** %3, align 8
  %43 = load i32, i32* %7, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i8, i8* %42, i64 %44
  %46 = load i8, i8* %45, align 1
  %47 = zext i8 %46 to i32
  %48 = ashr i32 %47, 1
  %49 = trunc i32 %48 to i8
  store i8 %49, i8* %45, align 1
  br label %50

50:                                               ; preds = %41
  %51 = load i32, i32* %7, align 4
  %52 = add nsw i32 %51, -1
  store i32 %52, i32* %7, align 4
  br label %16

53:                                               ; preds = %16
  %54 = load i8*, i8** %3, align 8
  %55 = call i64 @GETBIT(i8* %54, i32 28)
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %62

57:                                               ; preds = %53
  %58 = load i8*, i8** %3, align 8
  %59 = call i32 @CLRBIT(i8* %58, i32 28)
  %60 = load i8*, i8** %3, align 8
  %61 = call i32 @SETBIT(i8* %60, i32 0)
  br label %62

62:                                               ; preds = %57, %53
  %63 = load i8, i8* %6, align 1
  %64 = zext i8 %63 to i32
  %65 = and i32 %64, 1
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %70

67:                                               ; preds = %62
  %68 = load i8*, i8** %3, align 8
  %69 = call i32 @SETBIT(i8* %68, i32 28)
  br label %70

70:                                               ; preds = %67, %62
  %71 = load i8, i8* %6, align 1
  %72 = zext i8 %71 to i32
  %73 = ashr i32 %72, 1
  %74 = trunc i32 %73 to i8
  store i8 %74, i8* %6, align 1
  br label %75

75:                                               ; preds = %70
  %76 = load i32, i32* %5, align 4
  %77 = add nsw i32 %76, 1
  store i32 %77, i32* %5, align 4
  br label %11

78:                                               ; preds = %11
  ret void
}

declare dso_local i64 @GETBIT(i8*, i32) #1

declare dso_local i32 @CLRBIT(i8*, i32) #1

declare dso_local i32 @SETBIT(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
